<resources>
    <string name="app_name">FoodGoDriver</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="welcome">Chào mừng bạn !</string>
    <string name="information_login">Thông tin tài khoản</string>
    <string name="phone">Số điện thoại</string>
    <string name="name">Họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="password_again">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>

    <string name="register_now">Đăng ký ngay</string>
    <string name="login_now"> Đăng nhâp </string>
    <string name="question_register">Bạn chưa có tài khoản?</string>
    <string name="question_login">Bạn chưa có tài khoản?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>