<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity"
    android:background="@drawable/bg_gradient_top_to_bottom">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/TextAppearance.FoodGo.HeadingMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/TextAppearance.FoodGo.HeadingMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_radius_16dp_top"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">


        <TextView
            style="@style/TextAppearance.FoodGo.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/information_login"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/phone"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_password_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/password_again"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp" android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_license_plate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="Biển số xe "
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="32dp"
            android:inputType="textCapCharacters" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng kí"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:paddingVertical="8dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_register"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_now"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>