<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity"
    android:background="@drawable/bg_gradient_top_to_bottom">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/TextAppearance.FoodGo.HeadingMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/TextAppearance.FoodGo.HeadingMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_radius_16dp_top"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">


        <TextView
            style="@style/TextAppearance.FoodGo.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/information_login"/>



        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:background="@drawable/bg_input_login"
            android:paddingHorizontal="12dp"
            android:textSize="14sp"
            android:layout_marginBottom="32dp"
            android:inputType="textPassword" />

        <!--error-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng nhập"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:paddingVertical="8dp"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>